fix uneven index width

--- a/src/components/Main.sass
+++ b/src/components/Main.sass
@@ -26,8 +26,8 @@
          font-size: 1.6rem
 
       .index
-         flex-basis: 25px
-         padding: 0 20px
+         flex-basis: 50px
          color: #ccc
+         text-align: center
       .title
          flex-grow: 1
